<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@drawable/background">

    <!--<include-->
        <!--android:id="@+id/app_bar"-->
        <!--layout="@layout/app_bar"/>-->


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="9"
        android:padding="5dp"
        android:layout_height="0dp">

        <LinearLayout android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <LinearLayout android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="15dp"
                android:gravity="top"
                android:layout_marginTop="10dp">

                <TextView android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/otpconfirm"
                    android:textColor="@color/text_color"
                    android:layout_marginBottom="10dp"
                    android:padding="8dp"/>



                <EditText android:id="@+id/etotp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/otp"
                    android:ems="10"
                    android:inputType="number"
                    android:padding="15dp"
                    android:drawablePadding="3dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"/>



                <Button android:id="@+id/btnvarify"
                    android:layout_height="@dimen/edittext_height"
                    android:layout_width="match_parent"
                    android:text="@string/confirm"
                    android:background="@drawable/btn"
                    android:textColor="@color/txtcolor"
                    android:layout_marginTop="15dp"
                    android:padding="3dp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
